report_module_completed