@@ -1,21 +1,18 @@
 package com.example.matrimony.service;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.example.matrimony.entity.ArchivedChatMessage;
-import com.example.matrimony.entity.ChatMessage;
-import com.example.matrimony.entity.Profile;
-import com.example.matrimony.entity.UserReport;
-import com.example.matrimony.repository.ArchivedChatRepository;
-import com.example.matrimony.repository.ChatMessageRepository;
-import com.example.matrimony.repository.FriendRequestRepository;
-import com.example.matrimony.repository.ProfileRepository;
-import com.example.matrimony.repository.ProfileViewLogRepository;
-import com.example.matrimony.repository.UserReportRepository;
+import com.example.matrimony.dto.ChatMessageDto;
+import com.example.matrimony.dto.DeletedProfileBackupDTO;
+import com.example.matrimony.entity.*;
+import com.example.matrimony.repository.*;
+import com.fasterxml.jackson.databind.ObjectMapper;
 
 @Service
 public class AdminReportService {
@@ -26,24 +23,62 @@ public class AdminReportService {
     @Autowired private ArchivedChatRepository archivedChatRepo;
     @Autowired private ProfileViewLogRepository profileViewLogRepo;
     @Autowired private FriendRequestRepository friendRequestRepo;
+    @Autowired private DeletedProfileSnapshotRepository snapshotRepo;
+    @Autowired
+    private ObjectMapper objectMapper;
+    @Autowired
+    private UserBlockRepository chatBlockRepo;
     
+    private DeletedProfileBackupDTO buildBackup(
+            Profile profile,
+            List<ChatMessageDto> chatDtos
+    ) {
+
+        DeletedProfileBackupDTO dto = new DeletedProfileBackupDTO();
+
+        dto.setUserId(profile.getId());
+        dto.setFirstName(profile.getFirstName());
+        dto.setLastName(profile.getLastName());
+        dto.setEmail(profile.getEmailId());
+        dto.setMobile(profile.getMobileNumber());
+        dto.setGender(profile.getGender());
+        dto.setCreatedAt(profile.getCreatedAt());
+
+        dto.setChats(chatDtos);
+
+        dto.setDeletedAt(LocalDateTime.now());
+        dto.setDeletedByAdmin("ADMIN");
+        dto.setDeleteReason("Permanent delete");
+
+        return dto;
+    }
+
+
+
+    // ================= GET PENDING REPORTS =================
+    public List<UserReport> getPendingReports() {
+        return reportRepo.findByStatus(ReportStatus.PENDING);
+    }
+
+    // ================= APPROVE REPORT =================
     @Transactional
-    public void deleteReportedProfileByReportId(Long reportId) {
+    public void approveReport(Long reportId, String adminComment) {
 
         UserReport report = reportRepo.findById(reportId)
                 .orElseThrow(() -> new RuntimeException("Report not found"));
 
-        Profile reporter = report.getReporter();
+        if (report.getStatus() != ReportStatus.PENDING) {
+            throw new RuntimeException("Report already processed");
+        }
+
         Profile reported = report.getReportedUser();
+        Profile reporter = report.getReporter();
 
         Long reporterId = reporter.getId();
         Long reportedId = reported.getId();
 
-        /* ==============================
-           1️⃣ ARCHIVE CHAT
-           ============================== */
-        List<ChatMessage> chats =
-                chatRepo.findChatBetweenUsers(reporterId, reportedId);
+        // Archive chats
+        List<ChatMessage> chats = chatRepo.findChatBetweenUsers(reporterId, reportedId);
 
         List<ArchivedChatMessage> archived = chats.stream().map(c -> {
             ArchivedChatMessage a = new ArchivedChatMessage();
@@ -53,31 +88,97 @@ public class AdminReportService {
             a.setSentAt(c.getCreatedAt());
             a.setDeletedUserId(reportedId);
             return a;
-        }).toList();
+        }).collect(Collectors.toList());
 
         archivedChatRepo.saveAll(archived);
 
-        /* ==============================
-           2️⃣ DELETE LIVE CHAT
-           ============================== */
+        // Delete chats
         chatRepo.deleteAllByProfileId(reportedId);
 
-        /* ==============================
-           3️⃣ CLEAN RELATED DATA
-           ============================== */
+        // Clean social logs
         profileViewLogRepo.deleteAllByProfileId(reportedId);
         friendRequestRepo.deleteAllByProfileId(reportedId);
-     //   friendRequestRepo.deleteAllByProfileId(reportedId);
-        reportRepo.deleteAllByReportedUserId(reportedId);
 
-        /* ==============================
-           4️⃣ DELETE PROFILE (LAST)
-           ============================== */
-        profileRepo.deleteById(reportedId);
+        // Soft ban user
+        reported.setActive(false);
+        reported.setBanned(true);
+        reported.setBannedAt(LocalDateTime.now());
+        reported.setBanReason(adminComment);
+        profileRepo.save(reported);
+
+        // Update report
+        report.setStatus(ReportStatus.ACTION_TAKEN);
+        report.setReviewedAt(LocalDateTime.now());
+        report.setAdminComment(adminComment);
+        reportRepo.save(report);
     }
+
+    // ================= REJECT REPORT =================
+    @Transactional
+    public void rejectReport(Long reportId, String adminComment) {
+
+        UserReport report = reportRepo.findById(reportId)
+                .orElseThrow(() -> new RuntimeException("Report not found"));
+
+        report.setStatus(ReportStatus.REJECTED);
+        report.setReviewedAt(LocalDateTime.now());
+        report.setAdminComment(adminComment);
+
+        reportRepo.save(report);
+    }
+
+   
+ // ================= PERMANENT DELETE WITH FULL BACKUP =================
+    @Transactional
+    public void permanentDeleteUser(Long userId) {
+
+        // 1️⃣ Fetch profile
+        Profile profile = profileRepo.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        // 2️⃣ REMOVE ALL BLOCK REFERENCES (BOTH SIDES)
+        chatBlockRepo.deleteAllByBlockedId(userId);
+        chatBlockRepo.deleteAllByBlockerId(userId);
+
+        // ✅ CRITICAL: force execution of block deletes
+        chatBlockRepo.flush();
+
+        // 3️⃣ FETCH chats for BACKUP
+        List<ChatMessage> chats =
+                chatRepo.findAllBySender_IdOrReceiver_Id(userId, userId);
+
+        List<ChatMessageDto> chatDtos = chats.stream()
+                .map(ChatMessageDto::fromEntity)
+                .toList();
+
+        // 4️⃣ Build backup DTO
+        DeletedProfileBackupDTO backupDTO = buildBackup(profile, chatDtos);
+
+        String fullJson;
+        try {
+            fullJson = objectMapper.writeValueAsString(backupDTO);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to create backup JSON", e);
+        }
+
+        // 5️⃣ Save snapshot
+        DeletedProfileSnapshot snapshot = new DeletedProfileSnapshot();
+        snapshot.setUserId(userId);
+        snapshot.setFullProfileJson(fullJson);
+        snapshot.setDeletedAt(LocalDateTime.now());
+        snapshot.setDeletedByAdmin("ADMIN");
+        snapshot.setDeleteReason("Permanent delete");
+
+        snapshotRepo.save(snapshot);
+
+        // 6️⃣ Delete remaining dependencies
+        chatRepo.deleteAllBySender_IdOrReceiver_Id(userId, userId);
+        profileViewLogRepo.deleteAllByProfileId(userId);
+        friendRequestRepo.deleteAllByProfileId(userId);
+        reportRepo.deleteAllByReportedUser_Id(userId);
+
+        // 7️⃣ FINAL DELETE (NOW FK SAFE)
+        profileRepo.delete(profile);
+    }
+
 }
-
-
-	
-
-
